@@ -120,6 +120,7 @@ static const R_CallMethodDef callMethods[] = {
 	CALLMETHOD_DEF(debug_match_pdict, 0),
 	CALLMETHOD_DEF(XString_match_pdict, 8),
 	CALLMETHOD_DEF(XStringViews_match_pdict, 10),
+	CALLMETHOD_DEF(XStringSet_vmatch_pdict, 8),
 
 /* align_utils.c */
 	CALLMETHOD_DEF(PairwiseAlignment_nmatch, 4),
